--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.10.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.3.0",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/file-saver": "^2.0.7",
+    "@types/jspdf": "^1.3.3",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/sockjs-client": "^1.5.4",
